# DGOM

./: .gitignore  CMakeLists.txt  Makefile  MakefileCPU2d  MakefileCPU3d  MakefileGPU2d  MakefileGPU3d  README.md  readme.md
Meshes/: ._block2.neu
ThirdLibrary/CLAPACK-3.1.1.1/: make.inc  make.inc.example
ThirdLibrary/CLAPACK-3.1.1.1/INSTALL/: testdlamch  testdsecnd  testieee
ThirdLibrary/install/include/: pnetcdf.h
ThirdLibrary/parallel-netcdf-1.7.0/: Makefile.in  README.CRAY  config.status  configure  configure.in  macros.make
ThirdLibrary/parallel-netcdf-1.7.0/benchmarks/: Makefile
ThirdLibrary/parallel-netcdf-1.7.0/doc/: Makefile
ThirdLibrary/parallel-netcdf-1.7.0/examples/: Makefile
ThirdLibrary/parallel-netcdf-1.7.0/man/: pnetcdf.3
ThirdLibrary/parallel-netcdf-1.7.0/scripts/: Makefile
ThirdLibrary/parallel-netcdf-1.7.0/src/: Makefile
doc/: log.pptx
doc/doxygen/: CMakeLists.txt  Convection2d.h  Doxyfile.in  document-library.h  document-mainpage.h  document-src.h  doxygen-fixed-width.css  mainpage.h
externlib/: CMakeLists.txt
externlib/CLAPACK-3.1.1.1/: Makefile  make.inc
externlib/CLAPACK-3.1.1.1/INSTALL/: testlsame  testsecond  testslamch  testversion
externlib/parallel-netcdf-1.7.0/: Makefile  README.IBM  README.LINUX  README.SGI  aclocal.m4  config.status  configure_options.txt  macros.make  macros.make.in  rules.make
externlib/parmetis-4.0.3/: Changelog
include/: Mesh.h  fem.h
include/Convection2d/: Convection2d.h  ConvectionDriver.h  Mesh2d.h  NcOutput.h
include/Maxwell2d/: Mesh.h  fem.h
include/Quadrilateral/: dataN01.h  dataN02.h  dataN03.h  dataN04.h  dataN05.h  dataN06.h  dataN07.h  dataN08.h  dataN09.h  dataN10.h
include/Triangle/: dataN01.h  dataN02.h  dataN03.h  dataN04.h  dataN05.h  dataN06.h  dataN07.h  dataN08.h  dataN09.h  dataN10.h  dataN11.h  dataN12.h  dataN13.h  dataN14.h  dataN15.h  dataN16.h
src/: BuildMaps2d.c  CMakeLists.txt  FacePair2d.c  InitCPU2d.c  LoadBalance2d.c  MaxwellsDriver2d.c  MaxwellsKernel2d.cu  MaxwellsMPI2d.c  MaxwellsRHS2d.c  MaxwellsRun2d.c  StartUp2d.c
src/Conv2d/: CMakeLists.txt
src/Conv2d/Conv2d_st/: conv2d_st.c  conv2d_st.h  conv_extsol.c  conv_init_st.c  conv_input_st.c
src/Conv2d/ConvDriver2d/: conv2d.c  conv2d.h  conv_init.c  conv_input.c
src/Conv2d/ConvDriver2d_st/: conv2d_st.c  conv2d_st.h  conv_extsol.c  conv_init_st.c  conv_input_st.c
src/Conv2d/ConvLib/: conv_lib2d.h  conv_output.c  conv_rhs.c  conv_run.c
src/Conv2d/example/AdvectionDiffusion/: conv.inc  conv_rate.m  create_input.m  run.sh
src/Conv2d/example/SolidBodyRotation/: SolidBodyRotation.geo  SolidBodyRotation.init  SolidBodyRotation_init.m
src/Convection2d/: BuildMaps.c  CMakeLists.txt  ConvectionDriver2d.c  ConvectionDriver2d.h  ConvectionMesh2d.c  ConvectionOutput2d.c  ConvectionRHS2d.c  ConvectionRun2d.c  DisDetector.c  InitCondition.c  InitMeshInfo.c  InitialCondition.c  LimiterBJ2d.c  LoadBalance2d.c  Mesh2d.c  NcOutput.c  NcOutput.h  PairFace.c  Postprocess.c  SetUp.c  conv_driver.c  conv_driver.h  conv_driver2d.c  conv_driver2d.h  conv_extsol.c  conv_extsol.h  conv_getparameter.c  conv_getparameter.h  conv_init.c  conv_input.c  conv_intilization.c  conv_intilization.h  conv_mesh.c  conv_mesh.h  conv_output.c  conv_output.h  conv_rhs.c  conv_rhs.h  conv_run.c  conv_run.h
src/Convection2d/input/: conv_parameter.html
src/Demos/: CMakeLists.txt  test.c  test.h
src/Maxwell2d/: BuildMaps2d.c  CMakeLists.txt  FacePair2d.c  InitCPU2d.c  LoadBalance2d.c  MaxwellsDriver2d.c  MaxwellsKernel2d.cu  MaxwellsMPI2d.c  MaxwellsRHS2d.c  MaxwellsRun2d.c  Mesh2d.c  StartUp2d.c
src/Maxwell3d/: MaxwellsDriver3d.c
src/SWE2d/: CMakeLists.txt  SWEDriver2d.c  SWEDriver2d.h  SWEInit2d.c  SWEMesh2d.c  SWEOutput2d.c  SWERHS2d.c  SWERun2d.c  SWEUtilities.c  swe_dirver2d.c  swe_dirver2d.h  swe_driver2d.c  swe_driver2d.h  swe_extsol.c  swe_extsol.h  swe_getparameter.c  swe_getparameter.h  swe_init.c  swe_init.h  swe_input.c  swe_input.h  swe_mesh.c  swe_mesh.h  swe_output.c  swe_output.h  swe_read_command.c  swe_read_command.h  swe_rhs.c  swe_rhs.h  swe_run.c  swe_run.h
src/SWE2d/SWEDriver2d/: swe2d.c  swe2d.h  swe_init.c  swe_input.c
src/SWE2d/SWEDriver2d_st/: swe_extsol.c  swe_mesh.c
src/SWE2d/SWELib/: swe_flux.c  swe_lib.h  swe_obc.c  swe_output.c  swe_rhs.c  swe_run.c
src/SWE2d/example/CollapseMound/: LargeDomain.geo
src/SWE2d/example/FlowOver3Bumps2d/: FlowOver3Bump.init  FlowOver3Bump.node
src/SWE2d/example/IdealTidalPropagation/: Channel.edge  ClosedBay.edge  ClosedBay.node  Rectangle.fric  Rectangle.geo  Rectangle.init  Rectangle.msh  Rectangle.obc  Rectangle_fric.m  Rectangle_init.m  Rectangle_obc.m  point_result.m
src/SWE2d/example/IdealTidalPropagation/obcA/: Channel.edge  ClosedBay.edge  ClosedBay.ele  swe2d_channel.inc  swe2d_closedbay.inc
src/SWE2d/example/IdealTidalPropagation/obcB/: Channel.edge  ClosedBay.edge  swe2d_channel.inc  swe2d_closedbay.inc
src/SWE2d/example/IdealTidalPropagation/obcC/: Channel.edge  ClosedBay.edge  swe2d_channel.inc  swe2d_closedbay.inc
src/SWE2d/example/IdealTidalPropagation/obcD/: Channel.edge  ClosedBay.edge  swe2d_channel.inc  swe2d_closedbay.inc
src/SWE2d/example/IdealTidalPropagation/obcE/: Channel.edge  ClosedBay.edge  swe2d_channel.inc  swe2d_closedbay.inc
src/SWE2d/example/ParabolicBowl/: ParabolicBowl.fric  ParabolicBowl.geo  ParabolicBowl.init  ParabolicBowl_Quad.edge  ParabolicBowl_Quad.ele  ParabolicBowl_Quad.geo  ParabolicBowl_Quad.inc  ParabolicBowl_Quad.msh  ParabolicBowl_Quad.node  ParabolicBowl_Tri.edge  ParabolicBowl_Tri.ele  ParabolicBowl_Tri.geo  ParabolicBowl_Tri.inc  ParabolicBowl_Tri.msh  ParabolicBowl_Tri.node  ParabolicBowl_fric.m  ParabolicBowl_init.m
src/SWE2d/example/ParabolicBowl/postprocess/: ExtSolution.m  SectionProfile.m
src/SWE2d/example/Rectangle/: Rectangle.edge  Rectangle.ele
src/SWE2d/example/TsuamiRunup2d/: TsuamiRunup.bot  TsuamiRunup.geo  TsuamiRunup.node
src/Utilities/: CMakeLIsts.txt  CMakeLists.txt  GmshReader.c  ParallelPairs.c  Utils.c  dg_gmsh2triangle.c  dg_obc2nc.c
test/: CMakeLists.txt
(+342 files in other folders)
